# agentic-browser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_OS_AGENT.md  README_ROUTING.md  pyproject.toml
agentic_browser/: __init__.py  __main__.py  _legacy_agent.py  adapters.py  agent.py  approver.py  cli.py  config.py  domain_router.py  langchain_client.py  llm_client.py  logger.py  memory_tools.py  model_fetcher.py  os_tools.py  providers.py  safety.py  settings_store.py  tool_router.py  tool_schemas.py  tools.py  types.py  utils.py
agentic_browser/graph/: __init__.py  browser_manager.py  knowledge_base.py  main_graph.py  memory.py  state.py  supervisor.py  tool_registry.py  tracing.py
agentic_browser/graph/agents/: __init__.py  automation_agent.py  base.py  browser_agent.py  code_agent.py  os_agent.py  planner_agent.py  research_agent.py
agentic_browser/gui/: __init__.py  agent_thread.py  approval_dialog.py  frontier_ui.py  main_window.py  settings_dialog.py
tests/: __init__.py  test_automation_agent.py  test_bug_fixes.py  test_domain_router.py  test_json_parser.py  test_os_safety.py  test_os_tools.py  test_provider_adapters.py  test_safety_classifier.py  test_tool_router.py
